Do not show Open on zip files